--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MobileExample",
-  "version": "0.0.1",
+  "name": "coffeerepublic_back",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
