--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
