--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.5",
     "express": "^4.14.0",
+    "fcm-node": "^1.5.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
